--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,7 +7,7 @@
       "@/*": ["*"]
     },
     "target": "es5",
-    "outDir": "dist",
+    "outDir": "../public",
     "jsx": "react",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
